# symmetrical-couscous

./: .gitignore  LICENSE  README.md  pyproject.toml
pydba/: __init__.py  app.py  cli.py  config.py  db.py  extension.py
pydba/routes/: __init__.py  auth.py  main.py
pydba/static/: style.css
pydba/templates/: base.html  browse.html  databases.html  login.html  query.html  structure.html  tables.html
tests/: __init__.py  conftest.py  test_db.py  test_extension.py  test_routes.py
