[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pydba"
version = "0.1.0"
description = "A simple, stripped-down database admin tool in Python – like phpMyAdmin but lighter"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "sqlalchemy>=2.0",
    "pymysql>=1.1",
    "psycopg2-binary>=2.9",
    "cryptography>=42",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-flask>=1.3",
    "ruff>=0.4",
]

[project.scripts]
pydba = "pydba.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pydba*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
